ep.gov.pk: <marquee> is hidden behind <div> https://bugs.webkit.org/show_bug.cgi?id=281325

Reviewed by Antti Koivisto.

Marquee's shrinking behavior changed in 20632@main to fix a regression (see webkit.org/b/15296) but this behavior does seem non-interoperable anymore.
Both Firefox and Chrome disagree with WebKit here and they don't shrink the width of the inline marquee.
Confusingly the comment above this line (which was added _after_ the behavior change) suggests that marquees do _not_ shrink (and yet they do).

Let's revert to prior 20632@main and don't let inline marquees shrink when adjacent to float(s).

* LayoutTests/fast/block/float/marquee-shrink-to-avoid-floats-expected.html: Added.
* LayoutTests/fast/block/float/marquee-shrink-to-avoid-floats.html:
* LayoutTests/platform/glib/fast/block/float/marquee-shrink-to-avoid-floats-expected.txt: Removed.
* LayoutTests/platform/ios/fast/block/float/marquee-shrink-to-avoid-floats-expected.txt: Removed.
* LayoutTests/platform/mac/fast/block/float/marquee-shrink-to-avoid-floats-expected.png: Removed.
* LayoutTests/platform/mac/fast/block/float/marquee-shrink-to-avoid-floats-expected.txt: Removed.
* LayoutTests/platform/win/fast/block/float/marquee-shrink-to-avoid-floats-expected.txt: Removed.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::shrinkToAvoidFloats const):

Canonical link: https://commits.webkit.org/288461@main